fix: pipe overflow + states + logic + search

--- a/packages/components/filter-bar/pipes/base-pipe.scss
+++ b/packages/components/filter-bar/pipes/base-pipe.scss
@@ -1,3 +1,4 @@
+@use '../../core/styles/common';
 @use '../filter-bar-theme' as *;
 
 .kbq-pipe {
@@ -6,11 +7,20 @@
 
     max-height: 32px;
 
+    .kbq-button-wrapper {
+        max-width: 320px;
+    }
+
     .kbq-pipe__name {
+        @include common.kbq-truncate-line();
+
         color: var(--kbq-foreground-contrast-secondary);
     }
 
     .kbq-pipe__value {
+        @include common.kbq-truncate-line();
+
+        flex: 1;
         margin-left: 4px;
     }
 
